--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -6,7 +6,7 @@
     position: absolute;
     width: 100%;
     z-index: 10;
-    background-color: rgba(0, 0, 0, 0.43);
+    background-color: rgba(0, 0, 0, 0.524);
 }
 .Link{
     text-decoration: none;
@@ -39,7 +39,9 @@
     display: flex;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.22);
-    justify-content: flex-start;
-    align-items: flex-start;
     padding: 0;
+}
+.submenuDeploy .Link > li:hover{
+background-color: rgba(62, 62, 62, 0.312);
+
 }
