--- a/client/src/components/Products/products.module.css
+++ b/client/src/components/Products/products.module.css
@@ -1,13 +1,30 @@
 .containerSection{
     position: absolute;
-    margin-top: 10%;
+    margin-top: 40px;
     width: 100%;
     height: 100%;
     text-align: center;
 }
 .containerCategories{
-    background-color: red;
-    display: flex;
+    background-color: wheat;
+    padding: 4px;
+    border-radius: 5px;
+    width: 500px;
+    margin: 20px auto;
+
+}
+.containerCategories button{
+    padding: .5%;
+    margin-right: 10px;
+    text-transform: uppercase;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+.containerCategories button:hover{
+    color: rgb(205, 138, 15);
 }
 .containerProducts{
     text-align: center;
@@ -17,17 +34,23 @@
     height: 100vh;
     position: absolute;
 }
+
+/* ---- ITEM ---- */
 .itemContainer{
     margin: 10px;
     cursor: pointer;
 }
-.itemContainer img{
+.productImg{
     transition: 1s;
+    width: 300px;
     border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-.itemContainer img:hover{
+.productImg:hover{
     box-shadow: none;
-    transition: 1s;
-    
+    transition: 1s; 
+}
+.cartImg{
+    width: 30px;
+    cursor: pointer;
 }
