--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -86,3 +86,12 @@ background-color: rgba(62, 62, 62, 0.312);
 .cartItemContainer > img {
     width: 50px;
 }
+.removeItem{
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    background-color: transparent;
+}
+.removeItem i{
+    font-size: 16px;
+}
