--- a/client/src/components/Products/products.module.css
+++ b/client/src/components/Products/products.module.css
@@ -27,31 +27,104 @@
     color: rgb(205, 138, 15);
 }
 .containerProducts{
-    text-align: center;
+    /* text-align: center; */
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
+    flex-shrink: none;
     padding: 20px;
     height: 100vh;
     position: absolute;
 }
 
-/* ---- ITEM ---- */
+/* ------------------- ITEM ---------------- */
 .itemContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     margin: 10px;
+    padding: 0px 0px 8px 0px;
+    border: 1px solid rgb(90, 90, 90);
+    height: auto;
     cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .productImg{
     transition: 1s;
     width: 300px;
-    border-radius: 3px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    /* min-height: 400px; */
+    border-radius: 0px 0px 47px 47px;
+    margin: 0;
+    padding: 0;
+    /* border-radius: 3px; */
 }
 .productImg:hover{
     box-shadow: none;
     transition: 1s; 
 }
-.cartImg{
-    width: 30px;
+.infoContainer{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: center;
+    justify-items: center;
+}
+.price{
+    font-weight: bold;
+    font-size: 1.4rem;
+}
+.btnAddToCart{
+    background-color: #fbeee0;
+    border: 2px solid #422800;
+    border-radius: 30px;
+    box-shadow: #422800 2px 2px 0 0;
+    color: #422800;
     cursor: pointer;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 15px;
+    padding: 0 18px;
+    line-height: 30px;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.btnAddToCart:active {
+    box-shadow: #4228003b 2px 2px 0 0;
+    transform: translate(2px, 2px);
+}
+@media (min-width: 768px) {
+
+    .btnAddToCart {
+      min-width: 120px;
+      padding: 0 25px;
+    }
+  }
+
+.toAdd{
+    background-color: wheat;
+}
+/* ------------------- QUANTITY ---------------- */
+.containerQuantity{
+    border: 1px solid black;
+    width: 100px;
+    border-radius: 7px;
+    /* width: 30px; */
+}
+.quantityNumber{
+    padding-right: 9px;
+    padding-left: 9px;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+}
+.btnQuantity{
+    cursor: pointer;
+    border: none;
+    font-weight: bold;
+    font-size: 15px;
+    background-color: transparent;
+    padding: 7px;
 }
 
