--- a/client/src/components/Products/products.module.css
+++ b/client/src/components/Products/products.module.css
@@ -31,9 +31,9 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    flex-shrink: none;
-    padding: 20px;
-    height: 100vh;
+    margin-left: 10%;
+    margin-right: 10%;
+    gap: 80px;
     position: absolute;
 }
 
@@ -42,12 +42,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 10px;
+    /* margin: 10px; */
     padding: 0px 0px 8px 0px;
     border: 1px solid rgb(90, 90, 90);
     height: auto;
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    /* flex-basis: 300px; */
+    /* flex-grow: 1; */
 }
 .productImg{
     transition: 1s;
