--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap');
 .App {
   padding: 0;
   margin: 0;
@@ -5,4 +6,5 @@
 *{
   padding: 0;
   margin: 0;
+  font-family: 'Roboto Mono', monospace;
 }
