--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -53,12 +53,18 @@
     transform: translateY(-15px);
   }
 }
-/* ----------- Jeans Section------------ */
+/* ----------- NewArrivals Section------------ */
 .homePage > div{
     text-align: center;
     height: 100vh;
     background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(1, 9, 26, 0.959) 99%);
+}
+
+.container {
+  position: relative;
+  background:linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(1, 9, 26, 0.959) 99%);
+  height: 50vh;
 }
 
 .sloganSection p{
@@ -70,13 +76,18 @@
     font-size: 1.5rem;
     text-transform: uppercase;
 }
-.jeansContainer{
+.newArrivals{
     color: aliceblue;
 }
 .modelsJean{
     /* width: 100%; */
     display: flex;
     justify-content: center;
+    cursor: pointer;
+    
+  }
+  .modelsJean div{
+  z-index: 10;
 
 }
 .modelsJean img{
@@ -85,3 +96,88 @@
     margin-top: 30px;
     border-radius: 0px 40px 0 40px;
 }
+/* ----------- Categories Section------------ */
+.categoriesContainer{
+    color: wheat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.imgCategory{
+  width: 280px;
+  border-radius: 5px;
+}
+.firstImage{
+  flex-direction: column;
+  display: flex;
+  z-index: 10;
+}
+.firstImage h2{
+  font-family: 'Cinzel', serif;
+  font-size: 2rem;
+  color: wheat;
+}
+.firstImage img{
+  margin-top: 100px;
+}
+#secondImage{
+  margin-bottom: 150px;
+  z-index: 10;
+}
+.categoryList{
+  width: 600px; 
+  z-index: 10;
+}
+.categoryList > li{
+  border-bottom: 2px solid white;
+  font-size: 1.5rem;
+  text-align: start;
+  padding: 3px 10px;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 10px;
+  /* margin-left: 5px; */
+  text-decoration: none;
+  list-style: none;
+  transition: 0.5s;
+  color: white;
+  cursor: pointer;
+}
+.categoryList > li:hover{
+  border-bottom: 2px solid rgb(255, 190, 69);
+  color: rgb(255, 190, 69);
+}
+#category > div{
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(1, 9, 26, 0.959) 99%);
+  /* background: white; */
+}
+
+/* .wave {
+  position: relative;
+  height: 81px;
+  width: 100%;
+  background: #2c3e50;
+  bottom: 0;
+}
+
+.wave::before, .wave::after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+}
+
+.wave::before {
+  width: 55%;
+  height: 90%;
+  background-color: #fff;
+  right: -1.5%;
+  top: 60%;
+}
+.wave::after {
+  width: 55%;
+  height: 90%;
+  background-color: rgba(1, 9, 26, 0.959);
+  left: -1.5%;
+  top: 40%;
+} */
